; ModuleID = '/home/carl/AnghaBench/tengine/src/core/extr_ngx_file.c_ngx_next_temp_number.c'
source_filename = "/home/carl/AnghaBench/tengine/src/core/extr_ngx_file.c_ngx_next_temp_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_random_number = common dso_local global i32 0, align 4
@ngx_temp_number = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_next_temp_number(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @ngx_random_number, align 4
  br label %10

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %9, %7
  %11 = phi i32 [ %8, %7 ], [ 1, %9 ]
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* @ngx_temp_number, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @ngx_atomic_fetch_add(i32 %12, i32 %13)
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = add nsw i32 %15, %16
  ret i32 %17
}

declare dso_local i32 @ngx_atomic_fetch_add(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
